[package]
name = "actix"
version = "0.7.1"

[dependencies]
askama = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.5"
bytes = "0.4"
futures = "0.1"
http = "0.1"
diesel = { version = "1.2", features = ["postgres"] }
url = { version="1.7", features=["query_encoding"] }

actix = "0.7"
actix-web = { version="0.7", default-features = false }

phf = "0.7.22"

[build-dependencies]
askama = "0.7"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
